# CraftingLauncher

./: .clang-format  README.md  build-profile.json5
.hvigor/cache/: meta.json
.hvigor/dependencyMap/entry/: oh-package.json5
.hvigor/outputs/sync/: fileCache.json  output.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/licenses/: licenses-en-us.txt  licenses-zh-cn.txt
AppScope/resources/texts/: texts_en_us.json  texts_zh_cn.json
entry/: oh-package-lock.json5
entry/src/main/cpp/: CMakeLists.txt  NativeService.cpp  napi_init.cpp
entry/src/main/cpp/types/libentry/: oh-package.json5
entry/src/main/ets/: i18n.js
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: App.ets  Index.ets  Lang.ets  LicenseAgreement.ets  Login.ets  LoginPage.ets  Welcome.ets
